Update Assignment 1 - Conditional and Looping Statements.ipynb

--- a/Assignment 1 - Conditional and Looping Statements.ipynb
+++ b/Assignment 1 - Conditional and Looping Statements.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.\tWrite a program to check whether a triangle is valid or not if angles are given. Valid Triangle: Sum of all the angles should be 180.\n",
+    "2. Write a program to check whether a triangle is valid or not if angles are given. Valid Triangle: Sum of all the angles should be 180.\n",
     "All the angles should be greater than zero\n"
    ]
   },
